Fix TOCTOU races in actuator endpoints and webhook registrar
Snapshot the tunnel list in NgrokHealthIndicator and NgrokEndpoint to
prevent ConcurrentModificationException when tunnels change mid-iteration.
Synchronize getRegistrations() and getAutoDeregisterRegistrations() in
WebhookAutoRegistrar and return defensive copies. Handle empty or blank
webhook paths to avoid double-slash URLs.